@@ -54,6 +54,8 @@ ALTER TABLE `tagente_modulo` ADD COLUMN `min_ff_event_normal` int(4) unsigned de
 ALTER TABLE `tagente_modulo` ADD COLUMN `min_ff_event_warning` int(4) unsigned default '0';
 ALTER TABLE `tagente_modulo` ADD COLUMN `min_ff_event_critical` int(4) unsigned default '0';
 ALTER TABLE `tagente_modulo` ADD COLUMN `each_ff` tinyint(1) unsigned default '0';
+/* 2014/05/31 */
+ALTER TABLE `tagente_modulo` ADD COLUMN `ff_timeout` int(4) unsigned default '0';
 
 /* 2014/03/18 */
 -- ---------------------------------------------------------------------
@@ -218,3 +220,9 @@ ALTER TABLE `tnews` ADD COLUMN `id_group` int(10) NOT NULL default 0;
 ALTER TABLE `tnews` ADD COLUMN `modal` tinyint(1) DEFAULT 0;
 ALTER TABLE `tnews` ADD COLUMN `expire` tinyint(1) DEFAULT 0;
 ALTER TABLE `tnews` ADD COLUMN `expire_timestamp` DATETIME  NOT NULL DEFAULT 0;
+
+/* 2014/05/31 */
+-- ---------------------------------------------------------------------
+-- Table `tagente_estado`
+-- ---------------------------------------------------------------------
+ALTER TABLE `tagente_estado` ADD COLUMN `ff_start_utimestamp` bigint(20) default 0;
