@@ -919,6 +919,7 @@ if ($update_module || $create_module) {
 	$ff_event_warning = (int) get_parameter ('ff_event_warning');
 	$ff_event_critical = (int) get_parameter ('ff_event_critical');
 	$each_ff = (int) get_parameter ('each_ff');
+	$ff_timeout = (int) get_parameter ('ff_timeout');
 	$unit = (string) get_parameter('unit');
 	$id_tag = (array) get_parameter('id_tag_selected');
 	$serialize_ops = (string) get_parameter('serialize_ops');
@@ -1008,6 +1009,7 @@ if ($update_module) {
 		'min_ff_event_warning' => $ff_event_warning,
 		'min_ff_event_critical' => $ff_event_critical,
 		'each_ff' => $each_ff,
+		'ff_timeout' => $ff_timeout,
 		'unit' => $unit,
 		'macros' => $macros,
 		'quiet' => $quiet_module,
@@ -1145,6 +1147,7 @@ if ($create_module) {
 		'min_ff_event_warning' => $ff_event_warning,
 		'min_ff_event_critical' => $ff_event_critical,
 		'each_ff' => $each_ff,
+		'ff_timeout' => $ff_timeout,
 		'unit' => $unit,
 		'macros' => $macros,
 		'quiet' => $quiet_module,
