@@ -154,6 +154,7 @@ CREATE TABLE `tagente_estado` (
 	`last_status` tinyint(4) default 0,
 	`last_known_status` tinyint(4) default 0,
 	`last_error` int(4) NOT NULL default '0',
+	`ff_start_utimestamp` bigint(20) default 0,
 	PRIMARY KEY  (`id_agente_estado`),
 	KEY `status_index_1` (`id_agente_modulo`),
 	KEY `idx_agente` (`id_agente`),
@@ -238,6 +239,7 @@ CREATE TABLE IF NOT EXISTS `tagente_modulo` (
 	`min_ff_event_warning` int(4) unsigned default '0',
 	`min_ff_event_critical` int(4) unsigned default '0',
 	`each_ff` tinyint(1) unsigned default '0',
+	`ff_timeout` int(4) unsigned default '0',
 	PRIMARY KEY  (`id_agente_modulo`),
 	KEY `main_idx` (`id_agente_modulo`,`id_agente`),
 	KEY `tam_agente` (`id_agente`),
