@@ -1,3 +1,14 @@
+2014-05-31  Junichi Satoh  <junichi@rworks.jp>
+
+	* godmode/agentes/configurar_agente.php,
+	godmode/agentes/module_manager_editor.php,
+	godmode/agentes/module_manager_editor_common.php,
+	pandoradb.sql, pandoradb.oracle.sql, pandoradb.postgreSQL.sql,
+	extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql,
+	extras/pandoradb_migrate_5.0.x_to_5.1.oracle.sql,
+	extras/pandoradb_migrate_5.0.x_to_5.1.postgreSQL.sql: Improved
+	'FF threshold' to be able to define timeout.
+
 2014-05-30  Miguel de Dios <miguel.dedios@artica.es>
 	
 	* operation/events/sound_events.php: fixed the break image.
